--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,11 @@
-
+spring:
+  redis:
+    host: 124.222.145.80
+    port: 6379
+    password: sjz@3.14
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 8
+        min-idle: 0
+        max-wait: 100ms
